# libappindicator-rs

./: Cargo.toml
sys/: Cargo.toml
