[package]
name = "libappindicator"
version = "0.6.1"
description = "Rust safe bindings for libappindicator"
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = [ "linux", "gui", "gtk" ]

[dependencies]
log = "0.4"
glib = "0.10.0"
gtk = "0.9"
gtk-sys = "0.10"
libappindicator-sys = { version = "0.6", path = "sys/" }
